--- a/mmp-prj/mmp-prj/mmp-prj.csproj
+++ b/mmp-prj/mmp-prj/mmp-prj.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Bogus" Version="35.5.1" />
     <PackageReference Include="Faker.Net" Version="2.0.163" />
     <PackageReference Include="Microsoft.AspNet.SignalR" Version="2.4.3" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Cors" Version="5.3.0" />
